--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scrollbar-thin scrollbar-track-zinc-800 scrollbar-thumb-zinc-500">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Carlos Cousté - Portfolio Web</title>
+
+    <!--FavIcon-->
+    <link rel="shortcut icon" href="/images/favicon.svg" type="image/svg+xml">
+
+    <!--Google fonts link-->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Rubik+Wet+Paint&family=Teko:wght@300..700&display=swap" rel="stylesheet">
+
+    <!--Material symbols rounded-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
+
   </head>
   <body>
     <div id="root"></div>
